# founder-note-toolkit

./: .gitignore  .replit  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TODO.md  install.sh  pyproject.toml  requirements.txt
docs/: guide.md
examples/: run_workflow.sh
fnt/: __init__.py  cli.py  config.py  constants.py  models.py  settings.py
fnt/commands/: __init__.py  captions.py  clip.py  convert.py  doctor.py  info.py  metadata.py  search.py  titles.py  transcript.py  viral.py
fnt/services/: __init__.py  ai.py  analyzer.py  converter.py  ffmpeg.py  metadata.py  storage.py  transcript.py  utils.py  youtube.py
tests/: __init__.py  test_ai.py  test_android.py  test_cli.py  test_metadata.py  test_services.py  test_storage.py  test_utils.py
