[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "founder-note-toolkit"
version = "1.1.0"
description = "Help creators quickly turn long YouTube videos into viral short-form content."
readme = "README.md"
authors = [
    { name = "Founder Note Toolkit Maintainers", email = "support@foundernote.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "yt-dlp>=2024.12.06",
]

[project.optional-dependencies]
ai = [
    "google-generativeai>=0.8.0",
    "openai>=1.12.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-requests>=2.31.0",
]
full = [
    "google-generativeai>=0.8.0",
    "openai>=1.12.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-requests>=2.31.0",
]

[project.scripts]
fnt = "fnt.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["fnt", "fnt.*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL"]
ignore = ["PLR0913", "PLR0915", "PLR0912", "PLR2004", "PLW0603", "E501", "PLC0415", "B008", "B904"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
